--- a/style.portfolio.css
+++ b/style.portfolio.css
@@ -1,3 +1,41 @@
+.resolucion {
+    width: 99% ;
+    align-items: center;
+    text-align: center;
+    align-content: center;
+}
+
+/* Movil */
+@media (max-width: 767px) {
+    #desktop {
+        display: none;
+        ;
+    }
+    #tablet {
+        display: none;
+    }
+}
+
+/* Tablet */
+@media (min-width: 768px) and (max-width: 990px) {
+    #desktop {
+        display: none;
+    }
+    #movil {
+        display: none;
+    }
+}
+
+/* Escritorio */
+@media (min-width: 991px) {
+    #tablet {
+        display: none;
+    }
+    #movil {
+        display: none;
+    }
+}
+
 html {
     font-family: 'Sixtyfour', sans-serif;
 }
@@ -157,4 +195,5 @@ a:hover {
     align-items: center;
     display: block;
 }
+
 
